crates/overdrive-core/tests/compile_fail/libsql_handle_is_gone.stderr
error[E0432]: unresolved import `overdrive_core::reconciler::LibsqlHandle`
 --> tests/compile_fail/libsql_handle_is_gone.rs:9:5
  |
9 | use overdrive_core::reconciler::LibsqlHandle;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `LibsqlHandle` in `reconciler`
